--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 			<span class="comments"># I am a Technical Artist,</span><br/>
 			<span class="comments"># So I write code like a programmer to express my love.</span><br/>
 			<span class="comments">##</span><br/>
-			i = Boy(<span class="string">"Taigang Nie"</span>);<br/>
-			u = Girl(<span class="string">"Qian Ma"</span>);<br/>
+			i = Boy(<span class="string">"Nie Taigang"</span>);<br/>
+			u = Girl(<span class="string">"Zhu Rui"</span>);<br/>
 			<span class="comments"># Dec 1, 2021, I meet you </span><br/>
 			i.meet(u)<br/>
 			<span class="comments"># Afterwards, I confessed to you. </span><br/>
@@ -62,12 +62,12 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					Rui Zhu, I have fallen in love with you for
+					Zhu Rui, I have fallen in love with you for
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
 					Love u forever and ever.<br/>
-					<div class="signature">- Taigang Nie </div>
+					<div class="signature">- Nie Taigang </div>
 				</div>
 			</div>
 		</div>
