--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div id="code">
 			<span class="comments">##</span><br/>
 			<span class="comments"># I am a Technical Artist,</span><br/>
-			<span class="comments"># So I write code like a programmer to express my love.</span><br/>
+			<span class="comments"># So I write code to express my love.</span><br/>
 			<span class="comments">##</span><br/>
 			i = Boy(<span class="string">"Nie Taigang"</span>);<br/>
 			u = Girl(<span class="string">"Zhu Rui"</span>);<br/>
